2003-02-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: corrected typo and wrong fix.

2003-02-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: fixed code generation for Table/TableRow/TableCell
	when used explicitly.

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspElements.cs: get the property Type for controls that use
	ParseChildren with a property name.

	* AspGenerator.cs: generate correct signature for the method that
	adds controls to the default property in ParseChildren.

2003-02-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: rethrow exceptions that may come from parsing or 
	compilation if a user control.

2003-02-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: throw ParseException on parse
	error.

	* AspParser.cs: added Line and Column props.

	* CompilationException.cs: derives now from HtmlizedException.

	* CompilationResult.cs: added fileName field.  Fixed set_ExitCode.

	* GlobalAsaxCompiler.cs:
	* PageCompiler.cs:
	* UserControlCompiler.cs: pass the file name in the CompilationResult.

	* ParseException.cs: new exception.


2003-02-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: remove "file://" from the private bin path. Fixes
	bug #37628.

2003-02-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs: the parser fires events when it parses an element.

	* GlobalAsaxCompiler.cs:
	* PageCompiler.cs:
	* UserControlCompiler.cs:
	* AspElements.cs: modified to use the new parser interface.

	* AspGenerator.cs: modified to use the new parser. Merge multiple text
	strings into one single LiteralControl.

	* AspTokenizer.cs: added Line and Column properties.

2003-01-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs: fixed bug #36929.

2003-01-21  Tim Haynes <thaynes@openlinksw.com>

	* AspGenerator.cs:
	* BaseCompiler.cs:
	* CachingCompiler.cs: changes to work around spaces and